[gd_scene load_steps=3 format=3 uid="uid://bgehxm7k1l5w1"]

[ext_resource type="Script" path="res://Coba_Dialogue/coba_dialog.gd" id="1_opu30"]
[ext_resource type="Texture2D" uid="uid://bxo5d0l1ahdj5" path="res://Coba_Dialogue/soerjo_bust.png" id="4_vykms"]

[node name="CanvasLayer" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(0.5, 0.5)
script = ExtResource("1_opu30")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1151.0
offset_bottom = 651.0

[node name="Potrait" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 122.0
offset_top = 362.0
offset_right = 922.0
offset_bottom = 1162.0
texture = ExtResource("4_vykms")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_top = 364.0
offset_right = 1148.0
offset_bottom = 645.0

[node name="DialogueBox" type="TextureRect" parent="Control/MarginContainer"]
layout_mode = 2

[node name="NameBox" type="TextureRect" parent="Control/MarginContainer/DialogueBox"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NameTextBox" type="RichTextLabel" parent="Control/MarginContainer/DialogueBox/NameBox"]
layout_mode = 0
offset_right = 718.0
offset_bottom = 40.0
text = "Soerjo"

[node name="TextBox" type="RichTextLabel" parent="Control/MarginContainer/DialogueBox"]
layout_mode = 0
offset_left = -2.0
offset_top = 173.0
offset_right = 897.0
offset_bottom = 213.0
text = "Selamat Pagi"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(574, 326)
zoom = Vector2(0.25, 0.25)
